# sumi

./: Cargo.toml  LICENSE  README.md
.github/workflows/: CI.yaml  rust.yml
doc/: help.html  search-index.js
doc/src/sumi/: common.rs.html  extract_umis.rs.html  isomirs.rs.html  lengths.rs.html  main.rs.html  quality.rs.html  rna_counts.rs.html  trim_adapters.rs.html
doc/sumi/: fn.calculate_maximum_length.html  fn.calculate_minimum_length.html  fn.capture_files_to_delete.html  fn.capture_target_files.html  fn.get_read_counts.html  fn.get_umi_length.html  fn.main.html  fn.remove_intermediate_files.html  struct.SINGLE_INDEX_REGEX.html  struct.UMI_REGEX_QIAGEN.html
doc/sumi/common/: index.html
doc/sumi/extract_umis/: fn.extract_umis.html  fn.regex_extraction.html  index.html
doc/sumi/graph/: fn.find_true_umis.html  fn.umi_graph.html  sidebar-items.js
docs/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
docs/sumi/: all.html  fn.calculate_maximum_length.html  fn.calculate_minimum_length.html  fn.capture_files_to_delete.html  fn.capture_target_files.html  fn.get_read_counts.html  fn.is_gzipped.html  fn.main.html  fn.remove_intermediate_files.html  index.html  sidebar-items.js  struct.BASE_CAPTURE_REGEX.html  struct.Config.html  struct.DUAL_INDEX_REGEX.html  struct.NUM_CAPTURE_REGEX.html  struct.READ_NAME_UMI_REGEX.html  struct.SINGLE_INDEX_REGEX.html  struct.UMI_REGEX_QIAGEN.html
src/: common.rs  extract_umis.rs  graph.rs  isomirs.rs  lengths.rs  main.rs  quality.rs  rna_counts.rs  sample.rs  thresholds.rs  trim_adapters.rs
(+96 files in other folders)
