[package]
name = "sumi"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A simple analysis for small RNA libraries with UMIs."
repository = "https://github.com/cookienocreams/sumi"
readme = "README.md"
keywords = ["RNA", "rna", "miRNA", "mirna", "NGS"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.5.1"
maplit = "1.0.2"
hamming = "0.1"
hashbrown = "0.13.2"
regex = "1.5.4"
bio = "1.1.0"
lazy_static = "1.4.0"
libflate = "0.1.4"
seq_io = "0.3.1"
thiserror = "1.0"
flate2 = "1.0.26"
fastq = "0.6"
clap = "3"
polars = { version = "0.32.0", features = ["lazy"]}
csv = "1.1.6"
indicatif = "0.17.5"
rand = "0.8.5"
niffler = "2.3.0"
rand_chacha = "0.3.1"
glob = "0.3.0"
rust-htslib = { version = "0.46.0", default-features = false }
rayon = "1.8.1"
